--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="container">
         <div class="board" id="board">
         </div>
+        <button type="button" class="btn btn-primary" id="shuffle_btn">Shuffle</button>
     </div>
 </body>
 </html>
