--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,11 +8,21 @@
     <link rel="stylesheet" href="styles.css">
     <script type="module" src="js/script.js"></script>
 </head>
+
 <body>
     <div class="container">
+        <label for="game_mode">Mode:
+            <select name="game-mode" class="game-mode" id="game_mode">
+                <option value="3">Easy</option>
+                <option value="4">Medium</option>
+                <option value="5">Hard</option>
+                <option value="6">Expert</option>
+            </select>
+        </label>
         <div class="board" id="board">
         </div>
         <button type="button" class="btn btn-primary" id="shuffle_btn">Shuffle</button>
     </div>
 </body>
+
 </html>
