--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                     <option value="4">Medium</option>
                     <option value="5">Hard</option>
                     <option value="6">Expert</option>
+                    <option value="8">Master</option>
                 </select>
             </label>
             <label for="game_image" class="game-image">UPLOAD IMAGE
